--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -1,9 +1,10 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# Read about fixtures at
+# http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product: one
-  cart: one
+  product: ruby
+  order: one
 
 two:
-  product: two
-  cart: two
+  product: ruby
+  cart: one
